@@ -1,3 +1,7 @@
+2015-02-10  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Resolves #64517: Revert CaptchaValidator::isValid should be protected
+
 2015-02-04  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Resolves #64847: Fatal error on CaptchaValidator::isValid() from context PiBaseApi
